paument method oil and other updates